--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
+@import "sidebar.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,4 +6,7 @@
 .flex::before,
 .flex::after {
     display: none !important;
+}
+.top-search {
+    background-image: url('/icons/ic_search.svg');
 }
